<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblLicense"
        android:layout_width="111dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="54dp"
        android:text="@string/lblLicensePlate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:text="@string/lblDate"
        android:layout_marginLeft="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/lblLicense" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginLeft="29dp"
        android:text="@string/lblDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <TextView
        android:id="@+id/txtDateView"
        android:layout_width="120dp"
        android:layout_height="37dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lblDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.346"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/edtLicense" />

    <TextView
        android:id="@+id/lblCost"
        android:layout_width="73dp"
        android:layout_height="28dp"
        android:text="@string/lblCost"
        android:layout_marginLeft="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription" />

    <EditText
        android:id="@+id/edtLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/lblLicense"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="218dp"
        android:layout_height="45dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/lblDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtDateView" />

    <EditText
        android:id="@+id/edtCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/lblCost"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

    <Button
        android:id="@+id/btnSubmitBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/btnSubmit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCost" />
</android.support.constraint.ConstraintLayout>