<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblLicense"
        android:layout_width="119dp"
        android:layout_height="37dp"
        android:text="@string/lblLicensePlate"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="67dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="75dp"
        android:layout_height="37dp"
        android:layout_marginLeft="55dp"
        android:text="@string/lblDate"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/lblLicense" />

    <TextView
        android:id="@+id/lblCost"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:text="@string/lblCost"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
        android:layout_marginLeft="55dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginLeft="55dp"
        android:text="@string/lblDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <TextView
        android:id="@+id/txtDateView"
        android:layout_width="216dp"
        android:layout_height="35dp"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/edtLicense"
        app:layout_constraintLeft_toRightOf="@+id/lblDate"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edtLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/lblLicense"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toRightOf="@+id/lblDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDateView" />

    <EditText
        android:id="@+id/edtCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="-6dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintLeft_toRightOf="@+id/lblCost"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCost"
        app:layout_constraintVertical_bias="0.495" />
</android.support.constraint.ConstraintLayout>