<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblLicensePlate"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="51dp"
        android:text="@string/lblLicensePlate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/lblDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLicensePlate" />

    <TextView
        android:id="@+id/lblCost"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="82dp"
        android:text="@string/lblCost"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <Button
        android:id="@+id/btnSubmitFuelUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="39dp"
        android:text="@string/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtCost"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/txtDateView"
        android:layout_width="218dp"
        android:layout_height="33dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="72dp"
        app:layout_constraintLeft_toRightOf="@+id/lblDate"
        app:layout_constraintTop_toBottomOf="@+id/edtLicense"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edtCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintLeft_toRightOf="@+id/lblCost"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDateView" />

    <EditText
        android:id="@+id/edtLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/lblLicensePlate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.722" />
</android.support.constraint.ConstraintLayout>