<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblSID"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="103dp"
            android:textAlignment="center"
            android:text="@string/lblSID"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="56dp"
            android:textAlignment="center"
            android:text="@string/lblPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSID" />

        <EditText
            android:id="@+id/etSID"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="103dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.268"
            app:layout_constraintLeft_toRightOf="@+id/lblSID"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintLeft_toRightOf="@+id/lblPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSID" />

        <Button
            android:id="@+id/btnSignIn"
            style="@android:style/Widget.Button"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginLeft="102dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="27dp"
            android:onClick="onLogin"
            android:text="Sign In"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.929"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupRole" />


        <TextView
            android:id="@+id/lblGroup"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="84dp"
            android:checked="true"
            android:textAlignment="center"
            android:text="@string/lblGroup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

        <RadioGroup
            android:id="@+id/groupRole"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/lblGroup"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.351">


            <RadioButton
                android:id="@+id/radioStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="58dp"
                android:layout_weight="0.39"
                android:checked="false"
                android:text="@string/checkboxStudent"
                app:layout_constraintLeft_toRightOf="@+id/lblGroup"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <RadioButton
                android:id="@+id/radioDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="58dp"
                android:layout_weight="0.47"
                android:text="@string/checkboxDriver"
                app:layout_constraintLeft_toRightOf="@+id/radioStudent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        </RadioGroup>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
