<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/lblNumberOfPassenger"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtNumberOfPassenger"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBus" />

    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtLocation"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPassenger" />

    <TextView
        android:id="@+id/txtViewLocation"
        android:layout_width="368dp"
        android:layout_height="138dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLocation"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp" />


    <RadioGroup
        android:id="@+id/radioGroupPassenger"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNumberOfPassenger">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0-5" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5+" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="10+" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Full" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerBus"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginBottom="257dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectBus"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/lblSelectBus"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtSelectBus"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirmBus"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:onClick="onConfirmBus"
        android:text="@string/txtConfirmBus"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/spinnerBus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSelectBus" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="42dp"
        android:text="Start Trip"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLocation" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="42dp"
        android:text="End Trip"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintLeft_toRightOf="@+id/btnStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLocation" />

</android.support.constraint.ConstraintLayout>